Bug 235636 - Adding video shape causes crash
Summary: Adding video shape causes crash
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
: 241838 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-28 16:23 UTC by code-breaker
Modified: 2010-06-16 06:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Its a patch for the bug (908 bytes, patch)
2010-05-06 08:36 UTC, Gopalakrishna Bhat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description code-breaker 2010-04-28 16:23:14 UTC
Application: kpresenter (2.3 Alpha 1)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.31-20-generic-pae i686
Distribution: Ubuntu 9.10

-- Information about the crash:
In KOffice 2.2 Beta (1 and 2), when I select the video shape, as soon as I click on the work area to add it, the host application crashes. I have tried in KPresenter, KWord, and KSpread. 

Most recently, I have used KOffice that was built from svn that was updated on April 27, 2010. 

The crash can be reproduced every time.

 -- Backtrace:
Application: KPresenter (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  KoResourceManager::resource (this=0x0, key=75208282) at /home/code-breaker/Downloads/koffice/libs/flake/KoResourceManager.cpp:62
#7  0xafba6784 in VideoShapeFactory::createDefaultShape (this=0x8307610, documentResources=0x0) at /home/code-breaker/Downloads/koffice/plugins/videoshape/VideoShapeFactory.cpp:47
#8  0xb36a14b0 in KoCreateShapeStrategy (this=0x929d2d0, tool=0x8bd1358, clicked=...) at /home/code-breaker/Downloads/koffice/libs/flake/tools/KoCreateShapeStrategy.cpp:47
#9  0xb36b4cfb in KoCreateShapesTool::createStrategy (this=0x8bd1358, event=0xbffc8914) at /home/code-breaker/Downloads/koffice/libs/flake/tools/KoCreateShapesTool.cpp:96
#10 0xb36b444f in KoInteractionTool::mousePressEvent (this=0x0, event=0xbffc8914) at /home/code-breaker/Downloads/koffice/libs/flake/tools/KoInteractionTool.cpp:51
#11 0xb364ab14 in KoToolProxy::mousePressEvent (this=0x8bb8450, event=0xbffc8fc0, point=...) at /home/code-breaker/Downloads/koffice/libs/flake/KoToolProxy.cpp:174
#12 0xb14cdb8e in KoPAViewModeNormal::mousePressEvent (this=0x9115008, event=0xbffc8fc0, point=...) at /home/code-breaker/Downloads/koffice/libs/kopageapp/KoPAViewModeNormal.cpp:88
#13 0xb14c6d53 in KoPACanvas::mousePressEvent (this=0x8bcb240, event=0xbffc8fc0) at /home/code-breaker/Downloads/koffice/libs/kopageapp/KoPACanvas.cpp:213
#14 0xb63016fc in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#15 0xb62a33cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#16 0xb62aa9b7 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#17 0xb70615ba in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#18 0xb6d6abeb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#19 0xb62a990f in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#20 0xb6334cc8 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb63341a1 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#22 0xb636300a in ?? () from /usr/lib/libQtGui.so.4
#23 0xb5a58e88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#24 0xb5a5c730 in ?? () from /lib/libglib-2.0.so.0
#25 0xb5a5c863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#26 0xb6d96805 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0xb6362b35 in ?? () from /usr/lib/libQtGui.so.4
#28 0xb6d69209 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#29 0xb6d6965a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#30 0xb6d6d84f in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#31 0xb62a3467 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#32 0xb788a13d in kdemain (argc=1, argv=0x80fdf08) at /home/code-breaker/Downloads/koffice/kpresenter/part/main.cpp:44
#33 0x0804dff7 in _start ()

Reported using DrKonqi
Comment 1 Inge Wallin 2010-04-28 16:31:16 UTC
Confirmed.

When the shape is clicked in the "Add Shape" docker, the crash happens.  Wne it is dragged into the document, it doesn't.
Comment 2 Gopalakrishna Bhat 2010-05-05 13:24:10 UTC
(In reply to comment #1)
> Confirmed.
> 
> When the shape is clicked in the "Add Shape" docker, the crash happens.  Wne it
> is dragged into the document, it doesn't.

I am working on it.
Comment 3 Gopalakrishna Bhat 2010-05-06 08:36:40 UTC
Created attachment 43294 [details]
Its a patch for the bug

Hi,
fixed.
Comment 4 T Zachmann 2010-05-06 10:10:45 UTC
Hello

> Created an attachment (id=43294) [details]
> Its a patch for the bug

even if th patch fixes the problem, it is not a solution to the problem. The documentResources and the VideoCollection::ResourceId need to be there for the shape to work.
Comment 5 T Zachmann 2010-05-24 18:13:18 UTC
SVN commit 1130155 by zachmann:

o Fix Bug 235636 - Adding video shape causes crash

Thanks to Ajay Pundhir for providing the patch

BUG: 235636


 M  +2 -0      VideoShapeFactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1130155
Comment 6 Jan Sommer 2010-05-31 12:04:12 UTC
I installed KOffice 2.2.0 from the Ubuntu-Backports, but the bug still remains.
Didnt the patch make it into the final?
Comment 7 T Zachmann 2010-06-05 07:30:38 UTC
SVN commit 1134729 by zachmann:

Backport: SVN commit 1130155 by zachmann:

o Fix Bug 235636 - Adding video shape causes crash

Thanks for the reminder. The bug was only fixed after koffice 2.2.0 was
tagged. Will be in koffice 2.2.1.

CCBUG: 235636


 M  +2 -0      VideoShapeFactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1134729
Comment 8 T Zachmann 2010-06-16 06:15:13 UTC
*** Bug 241838 has been marked as a duplicate of this bug. ***