o Fix Bug 235636 - Adding video shape causes crash

Thanks to Ajay Pundhir for providing the patch

BUG: 235636

svn path=/trunk/koffice/; revision=1130155